@@ -19,8 +19,11 @@
 
     <properties>
         <java.version>21</java.version>
-        <spring.boot.version>3.3.2</spring.boot.version>
+        <spring.boot.version>3.4.0</spring.boot.version>
         <spring.cloud.version>2024.0.0</spring.cloud.version>
+        <maven.surefire.version>3.5.4</maven.surefire.version>
+        <maven.compiler.version>3.14.1</maven.compiler.version>
+        <maven.version>3.9.9</maven.version>
     </properties>
 
     <dependencyManagement>
@@ -54,5 +57,29 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.compiler.version}</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+
+            <!-- Add surefire plugin to pass JVM arg for tests -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven.surefire.version}</version>
+                <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
